test/corpus/mixed_operators.txt
==================
Mixed Operators
==================

model
  schema 1.1

type user

type document
  relations
    define allowed: [user]
    define blocked: [user]
    define relation1: ([user] and allowed) but not blocked
    define relation2: [user] and (allowed but not blocked)
    define relation3: [user, user:*, user#follower with cond] or ((relation1 and relation2) but not blocked)
    define relation4: ([user] or (relation1 and relation2)) but not relation3

---

(source_file
  (model)
  (schema
    (version))
  (type_declaration
    (extended_identifier))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (parenthesized_relation
                (relation_def
                  (binary_relation
                    (relation_def
                      (direct_relationship
                        (direct_relationship_item
                          (extended_identifier))))
                    (operator)
                    (relation_def
                      (extended_identifier))))))
            (operator)
            (relation_def
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (direct_relationship
                (direct_relationship_item
                  (extended_identifier))))
            (operator)
            (relation_def
              (parenthesized_relation
                (relation_def
                  (binary_relation
                    (relation_def
                      (extended_identifier))
                    (operator)
                    (relation_def
                      (extended_identifier)))))))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (direct_relationship
                (direct_relationship_item
                  (extended_identifier))
                (direct_relationship_item
                  (all))
                (direct_relationship_item
                  (relation_ref)
                  (conditional
                    (identifier)))))
            (operator)
            (relation_def
              (parenthesized_relation
                (relation_def
                  (binary_relation
                    (relation_def
                      (parenthesized_relation
                        (relation_def
                          (binary_relation
                            (relation_def
                              (extended_identifier))
                            (operator)
                            (relation_def
                              (extended_identifier))))))
                    (operator)
                    (relation_def
                      (extended_identifier)))))))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (parenthesized_relation
                (relation_def
                  (binary_relation
                    (relation_def
                      (direct_relationship
                        (direct_relationship_item
                          (extended_identifier))))
                    (operator)
                    (relation_def
                      (parenthesized_relation
                        (relation_def
                          (binary_relation
                            (relation_def
                              (extended_identifier))
                            (operator)
                            (relation_def
                              (extended_identifier))))))))))
            (operator)
            (relation_def
              (extended_identifier))))))))
