test/corpus/module_file.txt
==================
Mod  file
==================

schema: "1.2"
contents:
  - mod1.module.fga
  - mod2.module.fga

---

(source_file
  (schema
    (quoted_version
      (version)))
  (contents
    (file)
    (file)))
